@@ -1,3 +1,5 @@
+      - New type: AnyOf (union of defined types)
+
 0.16 - 2012-10-11
       - Handle undef with grace (github issues 13 and 14)
       - Improve POD for: InstanceOf, ConsumerOf, HasMethods
